# ai-agent-hackaton-app

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: update-requirements.yml
app/: main.py
app/components/: article_html_section.py  generate_article.py  map_section.py  map_viewer.py  sidebar_controls.py  simple_chatbot.py
app/config/: config.py  constants.py  env_config.py  prompt_config.py
app/pages/: four_images.py  map.py  show_article.py  show_html_article.py  show_titles.py  show_titles_images.py
app/pages/generated_articles/: 北海道_article.html
app/prompts/: APHORISM_PROMPT_TEXT.py  GENERATE_ARTICLE.py  GENERATE_ARTICLE_PROMPT_TEXT.py  PHILOSOPHICAL_TITLES_PROMPT 2.py  PHILOSOPHICAL_TITLES_PROMPT.py  sns.yaml  summarize.yaml
app/utils/: agent_generate_article.py  data_loader.py  generate_article.py  generate_four_images.py  generate_titles.py  generate_titles_images.py  geolocation_handler.py  html_formatter.py  html_styles.py  map_utils.py  state_manager.py  workflow_steps.py
documents/: article.md
