[tool.poetry]
name = "ai-agent-hackason-app"
version = "0.1.0"
description = ""
authors = ["vel-3633f <vel3633fu@gmail.com>"] 
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
streamlit = ">=1.44.1,<2.0.0" 
google-cloud-aiplatform = "^1.90.0"
langchain = "^0.3.24"
langchain-openai = "^0.3.14"
python-dotenv = "^1.1.0"
langchain-google-vertexai = "^2.0.23"
langchain-google-community = "^2.0.7"
beautifulsoup4 = "^4.13.4"
streamlit-folium = "^0.25.0"
folium = "^0.19.5"
geopandas = "^1.0.1"
streamlit-geolocation = "^0.0.10"
langgraph = "^0.4.5"
pygraphviz = "^1.14"


[build-system]
requires = ["poetry-core>=1.0.0"] 
build-backend = "poetry.core.masonry.api"
